--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import './styles/variables';
+@import './styles/base';
+@import './styles/angular-material-theme';
+@import './styles/angular-material-styles';
+@import './styles/responsive';
+@import './styles/general-styles';
+@import './styles/form';
+@import './styles/explorer';
+@import './styles/card';
+@import './styles/list';
