--- a/src/app/user-interface/electronic-filing/request-list/request-list-item.component.html
+++ b/src/app/user-interface/electronic-filing/request-list/request-list-item.component.html
@@ -12,7 +12,7 @@
     <div>{{request?.form?.fields['propertyName']}}</div>
   </div>
 
-  <div fxFlex="15%">
+  <div fxFlex="13%">
     <div *ngIf="request?.transaction?.uid">
       <div class="label">Trámite RPP</div>
       <div>
@@ -22,7 +22,7 @@
     </div>
   </div>
 
-  <div fxFlex="15%">
+  <div fxFlex="12%">
     <div *ngIf="request?.transaction?.uid">
       <div class="label">Pago</div>
       <div>
@@ -36,6 +36,12 @@
   <div fxFlex="8%">
     <div class="label">Estado:</div>
     <div class="primary-text nowrap"><b>{{request.status.name}}</b></div>
+  </div>
+
+  <div fxFlex="5%">
+    <div class="primary-text nowrap">
+      <button mat-mini-fab color="accent" matTooltip="Agregar personas al acto jurídico" (click)="editRequest()"><mat-icon>search</mat-icon></button>
+    </div>
   </div>
 
 </div>
