--- a/src/app/shared/containers/card/card.component.html
+++ b/src/app/shared/containers/card/card.component.html
@@ -13,7 +13,7 @@
 
   </div>
 
-  <div class="card-body">
+  <div class="card-body" (scroll)="onWindowScroll($event)">
     <ng-content></ng-content>
   </div>
 
