Transactions module added to routing

--- a/src/app/user-interface/main-layout/main-menu/main-menu.component.html
+++ b/src/app/user-interface/main-layout/main-menu/main-menu.component.html
@@ -1,7 +1,7 @@
 <div class="nav-bar">
   <ul>
     <li>MIS PENDIENTES</li>
-    <li><a routerLink='/electronic-filing/requests' routerLinkActive='selected' [routerLinkActiveOptions]="{exact:false}">TRÁMITES</a></li>
+    <li><a routerLink='/transactions' routerLinkActive='selected' [routerLinkActiveOptions]="{exact:false}">TRÁMITES</a></li>
     <li>MESA DE CONTROL</li>
     <li><a routerLink='/search-services' routerLinkActive='selected' [routerLinkActiveOptions]="{exact:false}">CONSULTAS</a></li>
     <li>CAPTURA HISTÓRICA</li>
