--- a/src/styles/ng-select.scss
+++ b/src/styles/ng-select.scss
@@ -1,82 +1,77 @@
 @import "~@ng-select/ng-select/themes/default.theme.css";
 
 .ng-select {
-    margin-right: 8px;
-    min-width: 75px;
+  margin-right: 8px;
+  min-width: 75px;
 }
 
 .ng-select .ng-select-container {
-    min-height:  $control-height !important;
-    margin: 2px 8px 2px 0;
-    padding: 2px 2px 2px 6px;
-    border-radius: 2px;
-    font-family: $font-family;
-    border: $control-border;
-    outline: none;
-    color: $selected-control-color;
-    background-color: $selected-control-background-color;
+  min-height: $control-height !important;
+  margin: 2px 8px 2px 0;
+  padding: 2px 2px 2px 6px;
+  border-radius: 2px;
+  font-family: $font-family;
+  border: $control-border;
+  outline: none;
+  color: $selected-control-color;
+  background-color: $selected-control-background-color;
 }
 
 .ng-select .ng-select-container .ng-value-container {
-    padding-left: 0;
+  padding-left: 0;
 }
 
 .ng-select.ng-select-single .ng-select-container {
-    height:  $control-height;
+  height: $control-height;
 }
 
 .ng-select.ng-select-single .ng-select-container .ng-value-container .ng-input {
-    padding-left: 8px;
+  padding-left: 8px;
 }
 
 .ng-select.ng-select-multiple .ng-select-container .ng-value-container {
-    padding-top: 0px;
-    padding-left: 0px;
+  padding-top: 0;
+  padding-left: 0;
 }
 
 .ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-placeholder {
-    padding-bottom: 0px;
+  padding-bottom: 0;
 }
 
 .ng-select.ng-select-multiple .ng-select-container .ng-value-container .ng-value {
-    font-size: .9em;
-    margin-bottom: 0px !important;
-    background-color: $control-disabled-background;
+  font-size: 0.9em;
+  margin-bottom: 0 !important;
+  background-color: $control-disabled-background;
 }
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
-    padding: 2px 2px 2px 6px;
-    font-size: .9em;
+  padding: 2px 2px 2px 6px;
+  font-size: .9em;
+}
+
+.ng-select.ng-select-focused:not(.ng-select-open) > .ng-select-container {
+  outline: none;
+  color: $selected-control-color;
+  background-color: $selected-control-background-color;
+  border: $selected-control-border;
+  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 0 3px rgba(186, 186, 186,0.1);
+}
+
+.ng-select.ng-select-disabled > .ng-select-container {
+  background-color: $control-disabled-background;
 }
 
 .ng-select .ng-clear-wrapper .ng-clear {
-    line-height: 2 !important;
+  line-height: 1rem !important;
 }
 
-.ng-select.ng-select-focused:not(.ng-select-open)>.ng-select-container {
-    outline: none;
-    color: $selected-control-color;
-    background-color: $selected-control-background-color;
-    border: $selected-control-border;
-    box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 0 3px rgba(186, 186, 186,0.1);
-    // box-shadow: inset 0 0 2px $selected-control-border;
-}
-
-.ng-select.ng-select-disabled>.ng-select-container {
-    background-color: $control-disabled-background;
-}
-
-.ng-select .ng-clear-wrapper .ng-clear {
-    line-height: 1rem !important;
-}
-
-.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected, 
+.ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected,
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-selected.ng-option-marked {
-    color: #333;
-    background-color: #f0f0f0;
+  color: #333;
+  background-color: #f0f0f0;
 }
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option.ng-option-marked {
-    color: #333;
-    background-color: #fafafa;
+  color: #333;
+  background-color: #fafafa;
 }
