--- a/src/styles/ng-select.scss
+++ b/src/styles/ng-select.scss
@@ -46,7 +46,11 @@
 
 .ng-dropdown-panel .ng-dropdown-panel-items .ng-option {
   padding: 2px 2px 2px 6px;
-  font-size: .9em;
+  font-size: 0.9em;
+}
+
+.ng-select.ng-select-disabled > .ng-select-container {
+  background-color: $control-disabled-background;
 }
 
 .ng-select.ng-select-focused:not(.ng-select-open) > .ng-select-container {
@@ -54,11 +58,9 @@
   color: $selected-control-color;
   background-color: $selected-control-background-color;
   border: $selected-control-border;
-  box-shadow: inset 0 1px 1px rgba(0,0,0,0.075), 0 0 0 3px rgba(186, 186, 186,0.1);
-}
-
-.ng-select.ng-select-disabled > .ng-select-container {
-  background-color: $control-disabled-background;
+  box-shadow:
+    inset 0 1px 1px rgba(0,0,0,0.075),
+    0 0 0 3px rgba(186, 186, 186,0.1);
 }
 
 .ng-select .ng-clear-wrapper .ng-clear {
