--- a/src/styles/ng-select.scss
+++ b/src/styles/ng-select.scss
@@ -59,8 +59,8 @@
   background-color: $selected-control-background-color;
   border: $selected-control-border;
   box-shadow:
-    inset 0 1px 1px rgba(0,0,0,0.075),
-    0 0 0 3px rgba(186, 186, 186,0.1);
+    inset 0 1px 1px rgba(0, 0, 0, 0.075),
+    0 0 0 3px rgba(186, 186, 186, 0.1);
 }
 
 .ng-select .ng-clear-wrapper .ng-clear {
