Transaction tabs added

--- a/src/app/user-interface/transactions/request-list/request-list-item.component.html
+++ b/src/app/user-interface/transactions/request-list/request-list-item.component.html
@@ -2,41 +2,23 @@
 
   <div fxFlex="35">
     <div class="label">Tipo de trámite</div>
-    <div class="primary-text nowrap"><b>{{request.type}}</b></div>
+    <div class="primary-text nowrap"><strong>{{request.type}}</strong></div>
     <div>{{request.subtype}}</div>
   </div>
 
-  <!-- <div *ngIf="request?.form?.fields['propertyData']?.propertyUID" fxFlex="auto">
-    <div class="label">Folio real del predio</div>
-    <div class="primary-text nowrap"><b>{{request?.form?.fields['propertyData']?.propertyUID || ''}}</b></div>
-    <div>{{request?.form?.fields['propertyName']}}</div>
-  </div> -->
-
   <div fxFlex="30%">
-    <div *ngIf="request?.uid">
+    <div *ngIf="request?.transactionID">
       <div class="label">Trámite RPP</div>
       <div>
-        <div class="primary-text nowrap"><b>{{request?.uid}}</b></div>
-        <div>{{request?.presentationTime | date:'dd/LLL/yyyy HH:mm'}}</div>
+        <div class="primary-text nowrap"><strong>{{request?.transactionID}}</strong></div>
+        <div>{{request?.presentationTime | dateTimeFormat}}</div>
       </div>
     </div>
   </div>
 
-  <!-- <div fxFlex="12%">
-    <div *ngIf="request?.transaction?.uid">
-      <div class="label">Pago</div>
-      <div>
-        <div class="primary-text nowrap"><b>Por verificar</b></div>
-        <div>{{request?.paymentOrder?.total | currency}}</div>
-        <div>{{request?.paymentOrder?.receiptNo}}</div>
-      </div>
-    </div>
-  </div> -->
-
   <div fxFlex="30%">
     <div class="label">Estado:</div>
-    <div class="primary-text nowrap"><b>{{request.statusName}}</b></div>
-    <!-- <div>{{preventiveNoteDueDate}}</div> -->
+    <div class="primary-text nowrap"><strong>{{request.statusName}}</strong></div>
   </div>
 
   <div fxFlex="5%">
