--- a/src/app/user-interface/document-recording/recording-acts/recording-acts.component.html
+++ b/src/app/user-interface/document-recording/recording-acts/recording-acts.component.html
@@ -1,11 +1,7 @@
 <emp-ng-card [title]="'Información del acto jurídico'"
              [hint]="request.requestedBy"
-             (cardClose)="onClose()"
-             (cardScroll)="onScroll($event)">
+             (cardClose)="onClose()">
 
-    <div fxFlexOffset="5" fxFlex="90">
-        <div class="section-title">Personas físicas y morales involucradas en el acto jurídico</div>
-        <emp-land-parties-list></emp-land-parties-list>
-        <emp-land-party-editor (emitSaved)="partyAdded($event)"></emp-land-party-editor> 
-    </div>
+    <emp-land-parties-editor></emp-land-parties-editor>
+    
 </emp-ng-card>
