Update copyright information

--- a/src/styles/ng-select.scss
+++ b/src/styles/ng-select.scss
@@ -1,4 +1,12 @@
-@import "~@ng-select/ng-select/themes/default.theme.css";
+/**
+ * @license
+ * Copyright (c) La Vía Óntica SC, Ontica LLC and contributors. All rights reserved.
+ *
+ * See LICENSE.txt in the project root for complete license information.
+ */
+
+ @import "~@ng-select/ng-select/themes/default.theme.css";
+
 
 .ng-select {
   margin-right: 8px;
