--- a/src/app/shared/form-controls/date-picker/date-picker.component.html
+++ b/src/app/shared/form-controls/date-picker/date-picker.component.html
@@ -1,10 +1,11 @@
 <span>
   <input type="text" class="text-box picker"
          autocomplete="off" maxlength="11"
+         #input
          [matDatepicker]="picker"
          [ngModel]="date"
-         (change)="onInputChange($event.srcElement.value)"
-         (dateChange)="onChange($event.value)">
+         (change)="onInputChange(input.value)"
+         (dateChange)="onChange(input.value)">
   <mat-datepicker-toggle matSuffix [for]="picker" [disabled]="disabled"></mat-datepicker-toggle>
-  <mat-datepicker #picker [disabled]="disabled" (dateChange)="onChange($event.value)"></mat-datepicker>
+  <mat-datepicker #picker [disabled]="disabled"></mat-datepicker>
 </span>
