Rfx: form field label above control + select-box setting

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -97,7 +97,7 @@ $selected-control-border: 1px solid #bababa;
 $control-disabled-background: #f0f0f0;
 $control-disabled-color: $secondary-color;
 
-$control-width: 99%;
+$control-width: calc(100% - 10px);
 $control-height: 28px;
 
 $button-color: #f8f8f8;
