Rfx Use a parameter to send Transaction to InstrumentEdition component

--- a/src/app/user-interface/instrument-edition/instrument-edition.component.html
+++ b/src/app/user-interface/instrument-edition/instrument-edition.component.html
@@ -1,1 +1,3 @@
-<emp-land-instrument-header></emp-land-instrument-header>
+<emp-land-instrument-header [transaction]="transaction" [instrument]="instrument">
+
+</emp-land-instrument-header>
