--- a/src/app/user-interface/transactions/main-page/transactions-main-page.component.html
+++ b/src/app/user-interface/transactions/main-page/transactions-main-page.component.html
@@ -11,17 +11,17 @@
     </emp-land-request-list>
   </div>
 
-  
+
   <div *ngIf="displayEditor" class="secondary">
     <emp-land-request-tabbed-view
-        [request]="selectedRequest"
+        [transaction]="selectedRequest"
         (closeEvent)="onCloseEditor()">
     </emp-land-request-tabbed-view>
   </div>
 
 
   <div *ngIf="displayEditorRecordingAct" class="secondary">
-    <emp-land-recording-acts 
+    <emp-land-recording-acts
         [request]="selectedRequest"
         (closeEvent)="onCloseEditor()">
     </emp-land-recording-acts>
